# data-scraper

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  car_gr.sh  car_gr_cookies.sh  car_ro_cookies.sh  cheatsheet.sh  scraping-bee.sh
config/: autouncle.json  car-gr-equipment.yml  cars-bg-equipment.yml  config.yml  details.plist  equipment-list.yml  equipment.yml  listing.plist  log4rs.yml  make_and_models.json  metada.plist  mobile_config.yml
config/loggers/: details_log4rs.yml  dev_log4rs.yml  listing_log4rs.yml  meta_log4rs.yml
config/mobile/: scraper-config.yml
config/schedulers/: details.plist  listing.plist  metada.plist  metadata.plist  scraper.plist
protos/: vehicle_model.proto
resources/csv/: Mercedes_SL.csv
resources/data/: change_log.csv  dashboard_feedback_log.csv  dealers_data.csv  dealers_sold.csv  details.csv  details_2023-05-05.csv  details_2023-05-06.csv  details_2023-05-07.csv  details_2023-05-08.csv  details_2023-05-09.csv  details_2023-05-10.csv  details_2023-05-12.csv  details_2023-05-15.csv  details_2023-05-16.csv  details_2023-05-18.csv  details_2023-05-22.csv  details_2023-05-30.csv  details_2023-05-31.csv  details_2023-06-01.csv  details_2023-06-20.csv  details_2023-06-21.csv  details_2023-10-26.csv  details_2023-10-27.csv  errors2023-05-30.csv  errors2023-05-31.csv  errors_2023-06-01.csv  errors_2023-06-20.csv  errors_2023-06-21.csv  errors_2023-10-26.csv  errors_2023-10-27.csv  listing.csv  listing_2023-10-27.csv  meta_data.csv  mobile_details.csv  mobile_meta_data.csv  mobile_prices.csv  mobile_sold.csv  mobile_sold_1.csv  private_data.csv  vehicle-2023-11-02.csv
resources/html/: Mercedes_SL.html  found_13.html  found_169.html  sold.html
src/: lib.rs
src/cmd/: mod.rs
src/config/: MakesAndModels.rs  MobileConfig.rs  app_config.rs  equipment.rs  links.rs  mod.rs
src/downloader/: FormDataRequest.rs  Scraper.rs  Utils.rs  data_reader.rs  details_scraper.rs  form_data_request.rs  mod.rs  model.rs  scraper.rs  utils.rs
src/helpers/: AutoUncleHelper.rs  CarGrHTMLHelper.rs  CarsBgHTMLHelper.rs  MobileBgHTMLHelper.rs  MobileDeHelper.rs  mod.rs
src/kafka/: KafkaConsumer.rs  KafkaProducer.rs  mod.rs
src/mobile/: mobile_model.rs  mod.rs
src/mobile_scraper/: currency.rs  data_processor.rs  details_scraper.rs  equipment.rs  mobile_utils.rs  mod.rs  model.rs  utils.rs
src/model/: AutoUncleVehicle.rs  MobileDe.rs  VehicleDataModel.rs  VehicleRecord.rs  change_log.rs  data.rs  details.rs  enums.rs  error.rs  id_list.rs  list.rs  meta.rs  mod.rs  records.rs  search_metadata.rs  (+1 more)
(+60 files in other folders)
