[package]
name = "data-scraper"
version = "1.0.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

[build]
target-dir = "/Users/matkat/Software/release/Rust/bin"

[dependencies]
reqwest = {version = "0.11.7", features=["blocking"]}
scraper = "0.17.1"
encoding_rs = "0.8.33"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
regex = "1.7.3"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
log4rs = "1.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
csv = "1.2.1"
chrono = "0.4.19"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
async-stream = "0.3.5"
mockito = "1.0.2"

[[bin]]
name="metadata"
path="src/bin/metadata.rs"

[[bin]]
name="listing"
path="src/bin/listing.rs"

[[bin]]
name="details"
path="src/bin/details.rs"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
rpath = false
